--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>React Lab01: JSX</title>
+    <title>React Home Work: JSX</title>
 </head>
 <body>
     <div id="root"></div>
